; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/tests/extr_bp_account.c_detect_ioctl.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/tests/extr_bp_account.c_detect_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_event_attr = type { i32 }

@the_var = common dso_local global i32 0, align 4
@PERF_EVENT_IOC_MODIFY_ATTRIBUTES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @detect_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @detect_ioctl() #0 {
  %1 = alloca %struct.perf_event_attr, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 1, i32* %3, align 4
  %4 = call i32 @wp_event(i8* bitcast (i32* @the_var to i8*), %struct.perf_event_attr* %1)
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = icmp sgt i32 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %0
  %8 = load i32, i32* %2, align 4
  %9 = load i32, i32* @PERF_EVENT_IOC_MODIFY_ATTRIBUTES, align 4
  %10 = call i32 @ioctl(i32 %8, i32 %9, %struct.perf_event_attr* %1)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @close(i32 %11)
  br label %13

13:                                               ; preds = %7, %0
  %14 = load i32, i32* %3, align 4
  %15 = icmp ne i32 %14, 0
  %16 = zext i1 %15 to i64
  %17 = select i1 %15, i32 0, i32 1
  ret i32 %17
}

declare dso_local i32 @wp_event(i8*, %struct.perf_event_attr*) #1

declare dso_local i32 @ioctl(i32, i32, %struct.perf_event_attr*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
